changed h1 header to fixed nav bar header
-created nav bar brand Photo Book instead if using an h1 header along
with an added invisible nav bar which is fixed to the top

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -23,7 +23,19 @@ body {
   height: 700px;
   padding-bottom: 20%;
   padding-top: 10%;
+}
 
+.navbar-brand {
+  padding-top: 20%;
+  font-size: 80px;
+  font-weight: 30px;
+  color: white;
+}
+
+
+.createAlbumBtn {
+    position: static;
+    border: 3px solid #73AD21;
 }
 
 .grid {
